fix: align external link markers
(for multi-line links)

--- a/src/assets/main.css
+++ b/src/assets/main.css
@@ -212,7 +212,7 @@ mark::before {
       position: absolute;
       font-size: .75em;
       opacity: .5;
-      top: -0.25em;
+      bottom:0;
     }
   }
 }
